--- a/BookStoreWeb/Views/Shared/_Layout.cshtml
+++ b/BookStoreWeb/Views/Shared/_Layout.cshtml
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css"/>
 
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/cusom.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/cart.css" asp-append-version="true"/>
     <link rel="stylesheet" href="//cdn.datatables.net/2.0.7/css/dataTables.dataTables.min.css"/>
 </head>
 
